# ecghula-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.bat  setup.sh
ecghula/: __main__.py  util.py
