[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
name = "ecghula"
version = "1.0.0"
# ...
dependencies = [
  "click == 8.1.7",
  "ecghula == 1.0.0",
  "numpy == 1.26.4",
  "pandas == 2.2.2",
  "python-dateutil == 2.9.0.post0",
  "pytz == 2024.1",
  "six == 1.16.0",
  "tqdm == 4.66.2",
  "tzdata == 2024.1",
]
# ...

[project.scripts]
ecghula = "ecghula.__main__:main"
